syntax = "proto3";

package notification;

option go_package = "github.com/milkyhoop/notification-service/internal/delivery/pb;pb";

service NotificationService {
  rpc SendNotification (NotificationRequest) returns (NotificationResponse);
}

message NotificationRequest {
  string user_id = 1;
  string content = 2;
}

message NotificationResponse {
  string status = 1;
  string message_id = 2;
}
